chore(build): Add @module-federation/typescript plugin

--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
   },
   "devDependencies": {
     "@4tw/cypress-drag-drop": "^2.2.1",
+    "@module-federation/typescript": "^0.1.8",
     "@storybook/addon-actions": "^6.5.10",
     "@storybook/addon-docs": "^6.5.9",
     "@storybook/addon-links": "^6.5.10",
