--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "css-loader": "^6.6.0",
     "css-minimizer-webpack-plugin": "^4.0.0",
     "cypress": "^10.6.0",
+    "cypress-file-upload": "^5.0.8",
     "dotenv-webpack": "8.0.1",
     "eslint": "7.32.0",
     "eslint-config-prettier": "8.5.0",
