Reverting back to webpack.common.js

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
   "extends": "./tsconfig.build.json",
   "compilerOptions": {
     "allowJs": false,
+    "jsx": "react",
     "baseUrl": ".",
     "declaration": true,
     "paths": {
