--- a/tsconfig.e2e.json
+++ b/tsconfig.e2e.json
@@ -17,6 +17,8 @@
     "paths": {
       "*": ["*", "types/*"],
       "@kaoto": ["./src/@kaoto"]
-    }
-  }
+    },
+    "types": ["cypress", "@testing-library/cypress"]
+  },
+  "include": ["./**/*.cy.(t|j)s"]
 }
