--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,8 +8,8 @@
     "paths": {
       "*": ["*", "types/*"],
       "@kaoto": ["./src/@kaoto"]
-    },
-    "typeRoots": ["./node_modules/@types"]
+    }
   },
-  "include": ["src", "webpack.common.js", "setupTests.ts"]
+  "include": ["src", "webpack.common.js", "setupTests.ts"],
+  "exclude": ["cypress"]
 }
