--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "kaoto-ui",
-  "version": "0.1.0",
-  "private": true,
+  "name": "@kaoto/kaoto-ui",
+  "version": "0.3.1",
   "federatedModuleName": "kaoto",
   "engines": {
     "node": ">=14.x"
