chore(e2e): use env var for e2e record key

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-CYPRESS_PROJECT_ID=zfop6s
-CYPRESS_RECORD_KEY=0dd9aec2-da11-480a-8d1f-628bb4d23fa3
+CYPRESS_PROJECT_ID=xx
+CYPRESS_RECORD_KEY=xx
 KAOTO_API=http://localhost:8081
