--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -12,7 +12,7 @@
     "noImplicitReturns": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "outDir": "dist",
+    "outDir": "dist/app",
     "sourceMap": true,
     "strict": true,
     "target": "es6",
