--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.6.0",
     "css-minimizer-webpack-plugin": "^4.1.0",
-    "cypress": "^10.6.0",
+    "cypress": "10.8.0",
     "cypress-file-upload": "^5.0.8",
     "dotenv-webpack": "8.0.1",
     "eslint": "7.32.0",
