--- a/tsconfig.e2e.json
+++ b/tsconfig.e2e.json
@@ -16,7 +16,8 @@
     "noUnusedParameters": true,
     "paths": {
       "*": ["*", "types/*"],
-      "@kaoto": ["./src/@kaoto"]
+      "@kaoto/types": ["./src/types"],
+      "@kaoto/store": ["./src/store"]
     }
   },
   "include": ["./**/*.cy.(t|j)s"]
