--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
     "declaration": true,
     "paths": {
       "*": ["*", "types/*"],
-      "@kaoto": ["./src/@kaoto"]
+      "@kaoto/types": ["./src/types"],
+      "@kaoto/store": ["./src/store"],
     }
   },
   "include": ["src", "webpack.common.js", "setupTests.ts"],
