feature(test): Adding coverage and codecov reporting

--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -1,4 +1,4 @@
-name: Unit Tests (Jest)
+name: 🧪 Unit Tests (Jest) 🧪
 
 on:
   push:
@@ -12,7 +12,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Install modules
+      - name: 🤹‍♀️ Install modules
         run: yarn
-      - name: Run tests
-        run: yarn test
+      - name: 🤺 Run tests
+        run: yarn test --coverage
+      - name: 💅 Upload coverage to Codecov
+        uses: codecov/codecov-action@v2
