--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@rhoas/app-services-ui-shared": "^0.16.4",
     "ajv": "^8.8.2",
     "immer": "^9.0.15",
+    "lodash.isequal": "^4.5.0",
     "monaco-editor": "^0.33.0",
     "monaco-editor-webpack-plugin": "^7.0.1",
     "react": "18.2.0",
@@ -80,6 +81,7 @@
     "@testing-library/user-event": "^14.4.3",
     "@trivago/prettier-plugin-sort-imports": "^3.3.0",
     "@types/jest": "^27.4.1",
+    "@types/lodash.isequal": "^4.5.6",
     "@types/react": "18.0.18",
     "@types/react-dom": "18.0.6",
     "@types/react-router-dom": "5.3.3",
@@ -88,6 +90,8 @@
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "5.36.1",
     "copy-webpack-plugin": "^11.0.0",
+    "copyfiles": "^2.4.1",
+    "cpr": "^3.0.1",
     "css-loader": "^6.6.0",
     "css-minimizer-webpack-plugin": "^4.0.0",
     "cypress": "^10.6.0",
@@ -126,9 +130,7 @@
     "webpack-cli": "4.10.0",
     "webpack-dev-server": "4.10.1",
     "webpack-merge": "^5.8.0",
-    "whatwg-fetch": "^3.6.2",
-    "cpr": "^3.0.1",
-    "copyfiles": "^2.4.1"
+    "whatwg-fetch": "^3.6.2"
   },
   "peerDependencies": {
     "@patternfly/patternfly": "4.210.2",
