--- a/tsconfig.lib.json
+++ b/tsconfig.lib.json
@@ -14,9 +14,9 @@
     "downlevelIteration": true,
     "skipLibCheck": true,
     "jsx": "react-jsx",
+    "esModuleInterop": true,
     "paths": {
-      "@kaoto/types": ["./src/types"],
-      "@kaoto/store": ["./src/store"]
+      "@kaoto/types": ["./src/types"]
     }
   },
   "include": ["src"],
