--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "use-debounce": "8.0.4",
     "uuid": "8.3.2",
     "web-vitals": "3.0.1",
+    "zundo": "^1.6.0",
     "zustand": "^4.1.1"
   },
   "devDependencies": {
