--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "kaoto-ui",
-  "version": "0.1.0",
-  "private": true,
+  "name": "@thiagoelg/kaoto-ui",
+  "version": "0.1.2",
   "federatedModuleName": "kaoto",
   "engines": {
     "node": ">=14.x"
@@ -12,7 +11,9 @@
     "start": "webpack serve --mode development --hot --progress --config webpack.dev.js ",
     "prod": "webpack serve --mode production --port 8080 --allowed-hosts all --progress --config webpack.prod.js ",
     "build": "webpack --mode production --config webpack.dev.js",
-    "build:lib": "rimraf dist/lib && npm run copy:css && npm run copy:images && tsc -p tsconfig.lib.json",
+    "build:prod": "webpack --mode production --config webpack.prod.js",
+    "build:lib": "rimraf dist/lib && yarn copy:css && yarn copy:images && tsc -p tsconfig.lib.json",
+    "build:lib:watch": "tsc-watch --noClear -p tsconfig.lib.json",
     "copy:css": "copyfiles -u 1 \"src/**/*.{sass,scss,css}\" dist/lib/",
     "copy:images": "cpr ./src/assets ./dist/lib/assets",
     "build-storybook": "build-storybook -s public",
@@ -56,6 +57,7 @@
     "react-monaco-editor": "^0.48.0",
     "react-router-dom": "5.3.3",
     "react-router-last-location": "2.0.1",
+    "simple-zustand-devtools": "^1.1.0",
     "tar-webpack-plugin": "^0.1.1",
     "uniforms": "^3.10.0",
     "uniforms-bridge-json-schema": "^3.10.0",
@@ -118,11 +120,11 @@
     "prop-types": "15.8.1",
     "react-refresh": "^0.14.0",
     "rimraf": "3.0.2",
-    "simple-zustand-devtools": "^1.1.0",
     "source-map-loader": "4.0.0",
     "style-loader": "3.3.1",
     "ts-jest": "27.1.4",
     "ts-loader": "9.3.1",
+    "tsc-watch": "^5.0.3",
     "tsconfig-paths-webpack-plugin": "4.0.0",
     "tslib": "^2.3.1",
     "typescript": "4.4.4",
@@ -135,17 +137,15 @@
   },
   "peerDependencies": {
     "@patternfly/patternfly": "4.210.2",
-    "@patternfly/react-core": "4.235.7",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "@patternfly/react-core": "*",
+    "@types/react": "*",
+    "react": "*",
+    "react-dom": "*"
   },
   "lint-staged": {
     "*.js": "eslint --cache --fix",
     "*.{tsx,ts}": "prettier --write",
     "*.tsx": "eslint --ext .tsx"
-  },
-  "resolutions": {
-    "@types/react": "18.0.18"
   },
   "bugs": {
     "url": "https://github.com/KaotoIO/kaoto-ui/issues"
@@ -167,5 +167,9 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/KaotoIO/kaoto-ui.git"
-  }
+  },
+  "files": [
+    "dist/lib",
+    "src"
+  ]
 }
