--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@thiagoelg/kaoto-ui",
-  "version": "0.1.3",
+  "name": "kaoto-ui",
+  "version": "0.1.0",
   "federatedModuleName": "kaoto",
   "engines": {
     "node": ">=14.x"
