chore(deps): upgrade react-flow to v11.x

--- a/package.json
+++ b/package.json
@@ -39,10 +39,10 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-error-boundary": "3.1.4",
-    "react-flow-renderer": "10.3.17",
     "react-monaco-editor": "^0.48.0",
     "react-router-dom": "5.3.3",
     "react-router-last-location": "2.0.1",
+    "reactflow": "^11.0.0-next.13",
     "tar-webpack-plugin": "^0.1.1",
     "uniforms": "^3.10.0",
     "uniforms-bridge-json-schema": "^3.10.0",
