--- a/package.json
+++ b/package.json
@@ -56,8 +56,8 @@
     "react-monaco-editor": "^0.48.0",
     "react-router-dom": "5.3.4",
     "react-router-last-location": "2.0.1",
-    "simple-zustand-devtools": "^1.1.0",
     "reactflow": "^11.1.0",
+    "simple-zustand-devtools": "^1.1.0",
     "tar-webpack-plugin": "^0.1.1",
     "uniforms": "^3.10.0",
     "uniforms-bridge-json-schema": "^3.10.0",
@@ -65,6 +65,7 @@
     "use-debounce": "8.0.4",
     "uuid": "9.0.0",
     "web-vitals": "3.0.2",
+    "zundo": "^2.0.0-beta.5",
     "zustand": "^4.1.1"
   },
   "devDependencies": {
