--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -6,16 +6,16 @@ body:
       value: |
         Thank you for reporting an issue :pray:.
 
-        - This issue tracker is for reporting bugs found in Kaoto (https://github.com/KaotoIO/kaoto-ui)
+        - This issue tracker is for reporting bugs found in [Kaoto UI](https://github.com/KaotoIO/kaoto-ui)
         - If you have a question about how to achieve something and are struggling, please post a question
-        inside of Kaoto's Discussion's tab: https://github.com/KaotoIO/kaoto-ui/discussions
-        - If it's an issue about the website please go to the kaoto.io website repo (https://github.com/KaotoIO/kaoto.io)
-        - If it's an issue about the backend or API, please go to that repo (https://github.com/KaotoIO/kaoto-backend)
+        inside of Kaoto's [Discussions](https://github.com/KaotoIO/kaoto-ui/discussions)
+        - If it's an issue about the website please go to the [kaoto.io website repo](https://github.com/KaotoIO/kaoto.io)
+        - If it's an issue about the backend or API, please go to [that repo](https://github.com/KaotoIO/kaoto-backend)
 
         Before submitting a new bug/issue, please check the links below to see if there is a solution or question posted there already:
-         - [Kaoto's Open Issue's tab](https://github.com/KaotoIO/kaoto-ui/issues?q=is%3Aissue+sort%3Aupdated-desc+position)
-         - [Kaoto's Closed Issues tab](https://github.com/KaotoIO/kaoto-ui/issues?q=is%3Aissue+sort%3Aupdated-desc+position+is%3Aclosed)
-         - [Kaoto's Discussion's tab](https://github.com/KaotoIO/kaoto-ui/discussions)
+         - [Kaoto's Open Issues](https://github.com/KaotoIO/kaoto-ui/issues?q=is%3Aissue+sort%3Aupdated-desc+position)
+         - [Kaoto's Closed Issues](https://github.com/KaotoIO/kaoto-ui/issues?q=is%3Aissue+sort%3Aupdated-desc+position+is%3Aclosed)
+         - [Kaoto Discussions](https://github.com/KaotoIO/kaoto-ui/discussions)
 
         The more information you fill in, the better the community can help you.
   - type: textarea
@@ -35,7 +35,7 @@ body:
         - Your bug will may get fixed much faster if we can run your code and it doesn't have dependencies other than
         Kaoto.
         - To create a shareable code example you can use [Codesandbox](https://codesandbox.io) or [Stackblitz](https://stackblitz.com/).
-        - Please read these tips for providing a minimal example: https://stackoverflow.com/help/mcve.
+        - Please read [these tips](https://stackoverflow.com/help/mcve) for providing a minimal example.
       placeholder: |
         e.g. https://stackblitz.com/edit/...... OR Github Repo
     validations:
@@ -58,7 +58,7 @@ body:
       label: Expected behavior
       description: Provide a clear and concise description of what you expected to happen.
       placeholder: |
-        As a user, I expected ___ behavior but I am seeing ___ instead.
+        As a user, I expected ___ behavior, but I am seeing ___ instead.
     validations:
       required: true
   - type: textarea
@@ -68,7 +68,7 @@ body:
       description: |
         If applicable, add screenshots or a video to help explain your problem.
         For more information on the supported file image/file types and the file size limits, please refer
-        to the following link: https://docs.github.com/en/github/writing-on-github/working-with-advanced-formatting/attaching-files
+        to the [following link](https://docs.github.com/en/github/writing-on-github/working-with-advanced-formatting/attaching-files).
       placeholder: |
         You can drag your video or image files inside of this editor ↓
   - type: textarea
