--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,5 +1,6 @@
 name: '🐛 Bug Report'
 description: Create a report to help us improve Kaoto
+labels: bug
 body:
   - type: markdown
     attributes:
