Move all issues to Kaoto private board

--- a/.github/workflows/roadmap-add-epics.yml
+++ b/.github/workflows/roadmap-add-epics.yml
@@ -2,7 +2,7 @@ name: ✨ Add epics to Roadmap ✨
 
 on:
   issues:
-    types: [opened, labeled]
+    types: [opened, edited, labeled, assigned]
 env:
   MY_GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}
 
@@ -17,6 +17,15 @@ jobs:
       with:
         project: 'https://github.com/orgs/KaotoIO/projects/3'
         column_name: 'WishList'
+        
+  assign_to_Kaoto_private:
+    runs-on: ubuntu-latest
+    name: 🎯 Move to Kaoto List 🎯
+    steps:
+      - uses: actions/add-to-project@v0.3.0
+        with:
+          project-url: https://github.com/orgs/KaotoIO/projects/10
+          github-token: ${{ secrets.GITHUB_TOKEN }}
 
   assign_to_newcomers_list:
     runs-on: ubuntu-latest
