--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@patternfly/react-table": "4.111.33",
     "@rhoas/app-services-ui-shared": "^0.16.4",
     "ajv": "^8.8.2",
+    "dagre": "^0.8.5",
     "immer": "^9.0.16",
     "lodash.isequal": "^4.5.0",
     "monaco-editor": "^0.33.0",
