--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,5 +1,5 @@
 blank_issues_enabled: false
 contact_links:
-  - name: 🤔 Feature Requests & Questions
+  - name: 🤔 Questions & Discussions
     url: https://github.com/KaotoIO/kaoto-ui/discussions
     about: Please ask and answer questions here.
