--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kaoto-ui",
+  "name": "@kaoto/kaoto-ui",
   "version": "0.4.1",
   "private": false,
   "federatedModuleName": "kaoto",
