feat(viz): migrate to elk for layouting
feat(viz): convert layouting function to promise, update store to use elk layout values

fix(viz): add node sourcePosition & targetPosition on updating layout choice

fix(viz): balanced layout

fix(viz): enhance distribution of nodes

fix(viz): add uuid to branch steps

fix(viz): use parent step uuid in branch step uuid to prevent potential conflict

fix(viz): enable forceNodeModelOrder to ensure branches are in order

rm math.random()

rm dagre

--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "@patternfly/react-table": "4.111.33",
     "@rhoas/app-services-ui-shared": "^0.16.6",
     "ajv": "^8.11.2",
-    "dagre": "^0.8.5",
+    "elkjs": "^0.8.2",
     "immer": "^9.0.16",
     "lodash.isequal": "^4.5.0",
     "monaco-editor": "^0.33.0",
@@ -123,6 +123,7 @@
     "tslib": "^2.4.1",
     "typescript": "4.4.4",
     "url-loader": "4.1.1",
+    "web-worker": "^1.2.0",
     "webpack": "5.75.0",
     "webpack-cli": "5.0.0",
     "webpack-dev-server": "4.11.1",
