--- a/.github/workflows/generate-docker-image.yml
+++ b/.github/workflows/generate-docker-image.yml
@@ -13,6 +13,7 @@ on:
     - cron:  '12 0 * * *'
 jobs:
   build:
+    name: 🐳 Generate Docker image
     runs-on: ubuntu-latest
     steps:
       - name: Set up Docker Buildx
