--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "@deepsource/shifty": "^1.0.0",
     "@kie-tools-core/editor": "0.25.0",
     "@kie-tools-core/guided-tour": "0.25.0",
     "@kie-tools-core/monaco-editor": "0.25.0",
@@ -62,7 +63,6 @@
     "uniforms-bridge-json-schema": "^3.10.1",
     "uniforms-patternfly": "^4.7.6",
     "use-debounce": "8.0.4",
-    "uuid": "9.0.0",
     "web-vitals": "3.1.0",
     "zundo": "^2.0.0-beta.6",
     "zustand": "^4.1.4"
