--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "lint": "eslint --ext .ts,.tsx,.js ./src",
     "lint:fix": "yarn lint --fix",
     "lint-staged": "yarn lint:fix && yarn format:fix",
-    "test": "jest src/**/*.test.ts*",
-    "test:coverage": "jest --coverage --watchAll=false",
+    "test": "jest --coverage src/**/*.test.ts*",
     "test:watch": "jest --watch"
   },
   "dependencies": {
@@ -62,7 +61,6 @@
     "uniforms-bridge-json-schema": "^3.10.1",
     "uniforms-patternfly": "^4.7.6",
     "use-debounce": "8.0.4",
-    "uuid": "9.0.0",
     "web-vitals": "3.1.0",
     "zundo": "^2.0.0-beta.6",
     "zustand": "^4.1.4"
@@ -82,7 +80,6 @@
     "@types/react-dom": "18.0.9",
     "@types/react-router-dom": "5.3.3",
     "@types/testing-library__jest-dom": "5.14.5",
-    "@types/uuid": "8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.45.0",
     "@typescript-eslint/parser": "5.45.0",
     "copy-webpack-plugin": "^11.0.0",
