feat(viz): adds ability to view branch step properties
chore(test): also test for falsey value before flattening array in test

chore(viz): add function for building branch info separately

chore(viz): refactor to include branchInfo in steps

add utility to find path to deeply nested structures

chore(branching): add store for lookup table for all nested steps

chore(test): update test for utils

chore(branching): add function to extract nested steps, add test

chore(branching): update nested steps store after regenerating UUIDs

chore(branching): check if step is nested prior to saving config

fix(branching): allow typing into properties field of nested step

chore(utils): add pathToString for fetching deeply nested values

feat(branching): use path to update deeply nested portion of step

chore(utils): add utility to modify deeply nested portion of step

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
     "moduleResolution": "node",
     "noFallthroughCasesInSwitch": true,
     "noImplicitAny": true,
-    "noImplicitReturns": true,
+    "noImplicitReturns": false,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "paths": {
