--- a/.github/workflows/add-standalone-jar-to-release.yml
+++ b/.github/workflows/add-standalone-jar-to-release.yml
@@ -1,4 +1,4 @@
-name: 👩‍💻 Add Standalone Jar to Release
+name: 👩‍💻 Add Standalone Jar to Release - modified workflow to test up to the real upload
 
 on:
   workflow_dispatch:
@@ -74,7 +74,7 @@ jobs:
       - name: 📦 Upload binaries to release
         uses: svenstaro/upload-release-action@v2
         with:
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          repo_token: invalidToken
           file: api/target/api-${{ env.api_version }}.jar
           asset_name: standalone-jar
           tag: ${{ github.ref }}
@@ -141,7 +141,7 @@ jobs:
       - name: Upload binaries to release
         uses: svenstaro/upload-release-action@v2
         with:
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          repo_token: invalidTokenToTest
           file: api/target/api-${{ env.api_version }}${{ matrix.file }}
           asset_name: ${{ matrix.asset_name }}
           tag: ${{ github.ref }}
