--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
   },
   "devDependencies": {
     "@4tw/cypress-drag-drop": "^2.2.3",
+    "@inrupt/jest-jsdom-polyfills": "^1.5.3",
     "@module-federation/typescript": "^2.1.3",
     "@testing-library/dom": "^8.19.1",
     "@testing-library/jest-dom": "^5.16.5",
@@ -102,7 +103,7 @@
     "file-selector": "^0.6.0",
     "html-webpack-plugin": "5.5.0",
     "jest": "29.3.1",
-    "jest-environment-jsdom": "^27.5.1",
+    "jest-environment-jsdom": "29.3.1",
     "lint-staged": "12.4.3",
     "mini-css-extract-plugin": "2.7.2",
     "null-loader": "^4.0.1",
