feat(branching): handle deeply nested steps in saveConfig

--- a/src/store/data/examples/kamelet.repeated-set-header.yaml
+++ b/src/store/data/examples/kamelet.repeated-set-header.yaml
@@ -36,6 +36,6 @@ spec:
             otherwise:
               steps:
                 - set-body:
-                    simple: cheesecubez
+                    simple: fusfusfus
         - to:
             uri: kamelet:sink
