chore: upgrade TypeScript to 4.9.4
new version of parse5 (7+) used is requiring a TypeScript 4.5 (
https://www.typescriptlang.org/docs/handbook/release-notes/typescript-4-5.html#type-modifiers-on-import-names
). It was before on 4.4.4

it allows to fix main branch when calling `yarn build:lib` which is used
to publish the npm package

fixes #1125

Signed-off-by: Aurélien Pupier <apupier@redhat.com>

--- a/package.json
+++ b/package.json
@@ -119,7 +119,7 @@
     "tsc-watch": "^6.0.0",
     "tsconfig-paths-webpack-plugin": "4.0.0",
     "tslib": "^2.4.1",
-    "typescript": "4.4.4",
+    "typescript": "^4.9.4",
     "url-loader": "4.1.1",
     "web-worker": "^1.2.0",
     "webpack": "5.75.0",
