feat(settings): allow changing code editor theme, add constants module
minor changes

chore: add constants module to other tsconfig settings

--- a/tsconfig.lib.json
+++ b/tsconfig.lib.json
@@ -20,6 +20,7 @@
       "@kaoto/api": ["./src/api"],
       "@kaoto/assets": ["./src/assets"],
       "@kaoto/components": ["./src/components"],
+      "@kaoto/constants": ["./src/store/constants"],
       "@kaoto/layout": ["./src/layout"],
       "@kaoto/routes": ["./src/routes"],
       "@kaoto/services": ["./src/services"],
