chore(storybook): add storybook & stories
chore(storybook): fix SettingsModal handling

chore(storybook): add DeploymentsModal story

chore(storybook): add AppearanceModal story

chore(storybook): group modal stories

chore(storybook): refactor WaitingPage + add story

chore(storybook): fix visualization stories

load stories alphabetically

fix for VisualizationStepViews story

add story for AppLayout

add story for Icons

chore(ci): exclude stories from codecov

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "build:dev": "webpack --mode production --config webpack.dev.js",
     "build:lib": "rimraf dist/lib && yarn copy:css && yarn copy:images && tsc -p tsconfig.lib.json && node ./scripts/fixTsPathsAlias.js",
     "build:lib:watch": "tsc-watch --noClear -p tsconfig.lib.json",
+    "build:storybook": "build-storybook",
     "copy:css": "copyfiles -u 1 \"src/**/*.{sass,scss,css}\" dist/lib/",
     "copy:images": "cpr ./src/assets ./dist/lib/assets",
     "clean": "rimraf dist",
@@ -25,6 +26,7 @@
     "lint": "eslint --ext .ts,.tsx,.js ./src",
     "lint:fix": "yarn lint --fix",
     "lint-staged": "yarn lint:fix && yarn format:fix",
+    "storybook": "start-storybook -p 6006",
     "test": "jest --coverage src/**/*.test.ts*",
     "test:watch": "jest --watch"
   },
@@ -68,7 +70,16 @@
   },
   "devDependencies": {
     "@4tw/cypress-drag-drop": "^2.2.3",
+    "@babel/core": "^7.20.12",
     "@module-federation/typescript": "^2.2.0",
+    "@storybook/addon-actions": "^6.5.16",
+    "@storybook/addon-essentials": "^6.5.16",
+    "@storybook/addon-interactions": "^6.5.16",
+    "@storybook/addon-links": "^6.5.16",
+    "@storybook/builder-webpack5": "^6.5.16",
+    "@storybook/manager-webpack5": "^6.5.16",
+    "@storybook/react": "^6.5.16",
+    "@storybook/testing-library": "^0.0.13",
     "@testing-library/dom": "^8.20.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -83,6 +94,7 @@
     "@types/testing-library__jest-dom": "5.14.5",
     "@typescript-eslint/eslint-plugin": "^5.51.0",
     "@typescript-eslint/parser": "5.51.0",
+    "babel-loader": "^8.3.0",
     "copy-webpack-plugin": "^11.0.0",
     "copyfiles": "^2.4.1",
     "cpr": "^3.0.1",
@@ -98,6 +110,7 @@
     "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-storybook": "^0.6.10",
     "eslint-plugin-testing-library": "5.10.0",
     "file-loader": "^6.2.0",
     "file-selector": "^0.6.0",
@@ -117,7 +130,7 @@
     "ts-jest": "29.0.5",
     "ts-loader": "9.4.2",
     "tsc-watch": "^6.0.0",
-    "tsconfig-paths-webpack-plugin": "4.0.0",
+    "tsconfig-paths-webpack-plugin": "^4.0.0",
     "tslib": "^2.5.0",
     "typescript": "^4.9.4",
     "url-loader": "4.1.1",
