test(otel): adding OpenTelemetry

--- a/package.json
+++ b/package.json
@@ -37,6 +37,15 @@
     "@kie-tools-core/notifications": "0.26.0",
     "@kie-tools-core/patternfly-base": "0.26.0",
     "@kie-tools-core/workspace": "0.26.0",
+    "@opentelemetry/api": "^1.4.0",
+    "@opentelemetry/exporter-trace-otlp-http": "^0.35.1",
+    "@opentelemetry/instrumentation": "^0.35.1",
+    "@opentelemetry/instrumentation-document-load": "^0.31.1",
+    "@opentelemetry/instrumentation-fetch": "^0.35.1",
+    "@opentelemetry/instrumentation-long-task": "^0.32.1",
+    "@opentelemetry/instrumentation-user-interaction": "^0.32.1",
+    "@opentelemetry/resources": "^1.9.1",
+    "@opentelemetry/sdk-trace-web": "^1.9.1",
     "@patternfly/patternfly": "4.224.2",
     "@patternfly/react-code-editor": "4.82.113",
     "@patternfly/react-core": "4.276.6",
