--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,8 @@
     "noImplicitReturns": false,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
+    "sourceMap": true,
+    "forceConsistentCasingInFileNames": true,
     "paths": {
       "*": ["*", "types/*"],
       "@kaoto/api": ["./src/api"],
