Fix e2e tests, relates to default DSL change

--- a/cypress/fixtures/EipAction.yaml
+++ b/cypress/fixtures/EipAction.yaml
@@ -56,6 +56,6 @@ spec:
                       - aggregate: {}
         - filter:
             simple: "{{?foo}}"
-            steps: []
-        - to:
-            uri: kamelet:sink
+            steps:
+              - to:
+                uri: kamelet:sink
