--- a/package.json
+++ b/package.json
@@ -130,6 +130,7 @@
     "jest-environment-jsdom": "^29.3.1",
     "lint-staged": "12.4.3",
     "mini-css-extract-plugin": "2.7.5",
+    "msw": "^1.1.0",
     "null-loader": "^4.0.1",
     "prettier": "2.8.7",
     "prop-types": "15.8.1",
@@ -193,5 +194,8 @@
     "dist",
     "src",
     "tsconfig.json"
-  ]
+  ],
+  "msw": {
+    "workerDirectory": "dist"
+  }
 }
