--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "@patternfly/react-table": "4.112.39",
     "@rhoas/app-services-ui-shared": "^0.16.6",
     "ajv": "^8.12.0",
-    "elkjs": "^0.8.2",
+    "dagre": "^0.8.5",
     "immer": "^9.0.19",
     "lodash.isequal": "^4.5.0",
     "monaco-editor": "^0.36.1",
