Fix the UI theme switch - add to local storage

--- a/tsconfig.lib.json
+++ b/tsconfig.lib.json
@@ -20,7 +20,7 @@
       "@kaoto/api": ["./src/api"],
       "@kaoto/assets": ["./src/assets"],
       "@kaoto/components": ["./src/components"],
-      "@kaoto/constants": ["./src/store/constants"],
+      "@kaoto/constants": ["./src/constants"],
       "@kaoto/hooks": ["./src/hooks"],
       "@kaoto/layout": ["./src/layout"],
       "@kaoto/routes": ["./src/routes"],
