fix(step-details): Add @patternfly standard spacing to form's field
At the moment all fields from the step's details are close to each
other making them hard to read.

This is caused because there's a div between the form element and its
children, meaning that the style cascade breaks.

Changes:
- Inherit the form styles to that intermediate div
- Remove the archived dependency "uniforms-patternfly" in favor of
  "@kie-tools/uniforms-patternfly"
- Add a jest moduleNameMapper config to use CJS instead of ESM for @kie-tools/uniforms-patternfly
fixes: https://github.com/KaotoIO/kaoto-ui/issues/1495

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@kie-tools-core/notifications": "0.27.0",
     "@kie-tools-core/patternfly-base": "0.27.0",
     "@kie-tools-core/workspace": "0.27.0",
+    "@kie-tools/uniforms-patternfly": "^0.27.0",
     "@opentelemetry/api": "^1.4.1",
     "@opentelemetry/exporter-trace-otlp-http": "^0.36.1",
     "@opentelemetry/instrumentation": "^0.36.1",
@@ -72,7 +73,6 @@
     "tar-webpack-plugin": "^0.1.1",
     "uniforms": "^3.10.2",
     "uniforms-bridge-json-schema": "^3.10.2",
-    "uniforms-patternfly": "^4.7.9",
     "use-debounce": "9.0.3",
     "web-vitals": "3.3.0",
     "zundo": "^2.0.0-beta.11",
