--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "types": "dist/lib/index.d.ts",
   "scripts": {
     "start": "webpack serve --mode development --hot --progress --config webpack.dev.js ",
+    "start:dev-webapp": "webpack serve --mode development --hot --progress --config ./dev-webapp/webpack.config.js",
     "prod": "webpack serve --mode production --port 8080 --allowed-hosts all --progress --config webpack.prod.js ",
     "build": "webpack --mode production --config webpack.prod.js",
     "build:dev": "webpack --mode production --config webpack.dev.js",
@@ -57,8 +58,8 @@
     "ajv": "^8.12.0",
     "dagre": "^0.8.5",
     "immer": "^9.0.21",
-    "lodash.isequal": "^4.5.0",
     "lodash.debounce": "^4.0.8",
+    "lodash.isequal": "^4.5.0",
     "monaco-editor": "^0.36.1",
     "monaco-editor-webpack-plugin": "^7.0.1",
     "monaco-yaml": "^4.0.4",
@@ -96,8 +97,8 @@
     "@testing-library/user-event": "^14.4.3",
     "@trivago/prettier-plugin-sort-imports": "^4.1.1",
     "@types/jest": "^29.5.0",
-    "@types/lodash.isequal": "^4.5.6",
     "@types/lodash.debounce": "^4.0.7",
+    "@types/lodash.isequal": "^4.5.6",
     "@types/node": "^18.15.10",
     "@types/react": "18.0.29",
     "@types/react-dom": "18.0.11",
@@ -130,11 +131,14 @@
     "jest-environment-jsdom": "^29.3.1",
     "lint-staged": "12.4.3",
     "mini-css-extract-plugin": "2.7.5",
+    "node-polyfill-webpack-plugin": "^2.0.1",
     "null-loader": "^4.0.1",
     "prettier": "2.8.7",
     "prop-types": "15.8.1",
     "react-refresh": "^0.14.0",
     "rimraf": "4.4.1",
+    "sass": "^1.60.0",
+    "sass-loader": "^13.2.1",
     "source-map-loader": "4.0.1",
     "style-loader": "3.3.2",
     "tar-webpack-plugin": "^0.1.1",
@@ -165,7 +169,9 @@
     "*.tsx": "eslint --ext .tsx"
   },
   "resolutions": {
-    "@types/react": "18.0.29"
+    "@types/react": "18.0.29",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "bugs": {
     "url": "https://github.com/KaotoIO/kaoto-ui/issues"
