--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kaoto/kaoto-ui",
-  "version": "0.7.6-dev",
+  "version": "0.7.6",
   "private": false,
   "federatedModuleName": "kaoto",
   "engines": {
