--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kaoto/kaoto-ui",
-  "version": "1.0.0-rc1",
+  "version": "1.0.0",
   "private": false,
   "federatedModuleName": "kaoto",
   "engines": {
