feat: Support editing steps from multiple flows
Currently we're calculating the step's ids by leveraging object references, this come
handy for branches but presents the problem of leaking object references between single
and multiple flows.

This commit leverages lodash.clonedeep dependency to make a copy of the steps as a
workaround for those situations.

This should change in the future with a more robust solution like immer.

relates to: https://github.com/KaotoIO/kaoto-ui/issues/801

--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "dagre": "^0.8.5",
     "html-to-image": "^1.11.11",
     "immer": "^10.0.2",
+    "lodash.clonedeep": "^4.5.0",
     "lodash.isequal": "^4.5.0",
     "monaco-editor": "^0.38.0",
     "monaco-editor-webpack-plugin": "^7.0.1",
@@ -96,6 +97,7 @@
     "@testing-library/user-event": "^14.4.3",
     "@trivago/prettier-plugin-sort-imports": "^4.1.1",
     "@types/jest": "^29.5.1",
+    "@types/lodash.clonedeep": "^4.5.7",
     "@types/lodash.isequal": "^4.5.6",
     "@types/node": "^18.16.3",
     "@types/react": "18.2.6",
