--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "build:dev": "webpack --mode production --config webpack.dev.js",
     "build:lib": "rimraf dist/lib && yarn copy:css && yarn copy:images && tsc -p tsconfig.lib.json && node ./scripts/fixTsPathsAlias.js",
     "build:lib:watch": "tsc-watch --noClear -p tsconfig.lib.json",
-    "build:storybook": "build-storybook",
+    "build:storybook": "storybook build",
+    "chromatic": "chromatic --build-script-name 'build:storybook' --skip 'dependabot/**' --exit-zero-on-changes",
     "copy:css": "copyfiles -u 1 \"src/**/*.{sass,scss,css}\" dist/lib/",
     "copy:images": "cpr ./src/assets ./dist/lib/assets",
     "clean": "rimraf dist",
@@ -26,7 +27,7 @@
     "lint": "eslint --ext .ts,.tsx,.js ./src",
     "lint:fix": "yarn lint --fix",
     "lint-staged": "yarn lint:fix && yarn format:fix",
-    "storybook": "start-storybook -p 6006",
+    "storybook": "storybook dev -p 6006",
     "test": "jest --coverage src/**/*.test.ts*",
     "test:watch": "jest --watch"
   },
@@ -82,14 +83,18 @@
   "devDependencies": {
     "@4tw/cypress-drag-drop": "^2.2.3",
     "@babel/core": "^7.21.8",
+    "@babel/preset-env": "^7.21.5",
+    "@babel/preset-react": "^7.18.6",
+    "@babel/preset-typescript": "^7.21.5",
     "@module-federation/typescript": "^2.3.0",
-    "@storybook/addon-actions": "^6.5.16",
+    "@storybook/addon-actions": "^7.0.8",
     "@storybook/addon-essentials": "^7.0.12",
     "@storybook/addon-interactions": "^7.0.12",
-    "@storybook/addon-links": "^6.5.16",
+    "@storybook/addon-links": "^7.0.8",
     "@storybook/builder-webpack5": "^6.5.16",
     "@storybook/manager-webpack5": "^6.5.16",
-    "@storybook/react": "^6.5.16",
+    "@storybook/react": "^7.0.8",
+    "@storybook/react-webpack5": "^7.0.8",
     "@storybook/testing-library": "^0.1.0",
     "@testing-library/dom": "^9.3.0",
     "@testing-library/jest-dom": "^5.16.5",
@@ -107,6 +112,7 @@
     "@typescript-eslint/eslint-plugin": "^5.59.6",
     "@typescript-eslint/parser": "5.59.6",
     "babel-loader": "^9.1.2",
+    "chromatic": "^6.17.3",
     "copy-webpack-plugin": "^11.0.0",
     "copyfiles": "^2.4.1",
     "cpr": "^3.0.1",
@@ -138,6 +144,7 @@
     "react-refresh": "^0.14.0",
     "rimraf": "5.0.0",
     "source-map-loader": "4.0.1",
+    "storybook": "^7.0.8",
     "style-loader": "3.3.2",
     "tar-webpack-plugin": "^0.1.1",
     "ts-jest": "29.1.0",
