--- a/package.json
+++ b/package.json
@@ -138,6 +138,7 @@
     "lint-staged": "12.4.3",
     "mini-css-extract-plugin": "2.7.6",
     "msw": "^1.2.1",
+    "msw-storybook-addon": "^1.8.0",
     "null-loader": "^4.0.1",
     "prettier": "2.8.8",
     "prop-types": "15.8.1",
@@ -204,6 +205,6 @@
     "tsconfig.json"
   ],
   "msw": {
-    "workerDirectory": "dist"
+    "workerDirectory": "public"
   }
 }
