--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "lint:fix": "yarn lint --fix",
     "lint-staged": "yarn lint:fix && yarn format:fix",
     "storybook": "storybook dev -p 6006",
-    "test": "jest --coverage src/**/*.test.ts*",
+    "test": "jest --coverage",
     "test:watch": "jest --watch"
   },
   "dependencies": {
