chore: adjust codecov github action to ignore tests and stubs

--- a/.github/codecov.yml
+++ b/.github/codecov.yml
@@ -8,3 +8,7 @@ coverage:
         base: auto
 ignore:
   - "**/*.stories.tsx"
+  - "**/*.(test|stories).{ts,tsx}"
+  - "**/index.ts"
+  - "**/store/data/**"
+  - "**/stubs/**"
