chore: adjust codecov.yml to calculate removed lines
From the docs: https://docs.codecov.com/docs/commit-status

"removed_code_behavior: adjust_base": consists in adjusting
the BASE coverage by recalculating it, and then comparing it
to the unchanged HEAD. The adjustment is to remove misses, hits
and partials from lines that were removed in the diff from BASE
(as if all removals were made already in BASE) and re-calculate
coverage (coverage = hits / (hits + misses + partials)).

This behavior is skipped if target coverage is defined.

Example:
The project status check (if status threshold: is default/not set or automatic) will pass because adjusted base coverage =

9 starting lines in base MINUS 3 removed lines in the head of the PR = 6 covered lines in adjust_base
/
10 starting lines in base MINUS 3 removed lines in the head of the PR = 7 covered lines in adjust_base
Adjusted base coverage % = 85.7%

Therefore project coverage has increased to 87.5% (7/8 covered lines) from adjusted_base of 85.7%, an increase of 1.8%.

--- a/.github/codecov.yml
+++ b/.github/codecov.yml
@@ -6,6 +6,7 @@ coverage:
         target: auto
         threshold: 0.5%
         base: auto
+        removed_code_behavior: adjust_base
 ignore:
   - "**/*.stories.tsx"
   - "**/*.(test|stories).{ts,tsx}"
