--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,2 +1,9 @@
-yarnPath: .yarn/releases/yarn-3.6.0.cjs
 nodeLinker: node-modules
+
+plugins:
+  - path: .yarn/plugins/@yarnpkg/plugin-workspace-tools.cjs
+    spec: "@yarnpkg/plugin-workspace-tools"
+  - path: .yarn/plugins/@yarnpkg/plugin-exec.cjs
+    spec: "@yarnpkg/plugin-exec"
+
+yarnPath: .yarn/releases/yarn-3.6.0.cjs
