--- a/package.json
+++ b/package.json
@@ -174,7 +174,9 @@
     "*.tsx": "eslint --ext .tsx"
   },
   "resolutions": {
-    "@types/react": "18.2.8"
+    "@types/react": "18.2.8",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "bugs": {
     "url": "https://github.com/KaotoIO/kaoto-ui/issues"
