--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,5 +1,8 @@
 nodeLinker: node-modules
 
+# https://yarnpkg.com/configuration/yarnrc#enableScripts
+enableScripts: true
+
 plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-workspace-tools.cjs
     spec: "@yarnpkg/plugin-workspace-tools"
