--- a/package.json
+++ b/package.json
@@ -103,11 +103,11 @@
     "@types/jest": "^29.5.2",
     "@types/lodash.clonedeep": "^4.5.7",
     "@types/lodash.isequal": "^4.5.6",
-    "@types/node": "^18.16.3",
-    "@types/react": "18.2.11",
-    "@types/react-dom": "18.2.4",
-    "@types/react-router-dom": "5.3.3",
-    "@types/testing-library__jest-dom": "5.14.6",
+    "@types/node": "^20.3.1",
+    "@types/react": "^18.2.12",
+    "@types/react-dom": "^18.2.5",
+    "@types/react-router-dom": "^5.3.3",
+    "@types/testing-library__jest-dom": "^5.14.6",
     "@typescript-eslint/eslint-plugin": "^5.59.11",
     "@typescript-eslint/parser": "^5.59.11",
     "babel-loader": "^9.1.2",
