chore: Schedule renovate to run daily

--- a/renovate.json
+++ b/renovate.json
@@ -4,6 +4,10 @@
     "config:base",
     ":dependencyDashboard"
   ],
+  "schedule": [
+    "before 6am"
+  ],
+  "prCreation":"not-pending",
   "packageRules": [
     {
       "groupName": "react monorepo",
