chore: reformat files and enable lint check

--- a/src/store/data/examples/camel-route.choice.yaml
+++ b/src/store/data/examples/camel-route.choice.yaml
@@ -1,15 +1,15 @@
 - from:
-    uri: "timer:start"
+    uri: 'timer:start'
     steps:
-    - choice:
-        precondition: true
-        when:
-        - simple: "{{?red}}"
-          steps:
-          - to: "log:red"
-        - simple: "{{?blue}}"
-          steps:
-          - to: "log:blue"
-        otherwise:
-          steps:
-          - to: "log:info"
+      - choice:
+          precondition: true
+          when:
+            - simple: '{{?red}}'
+              steps:
+                - to: 'log:red'
+            - simple: '{{?blue}}'
+              steps:
+                - to: 'log:blue'
+          otherwise:
+            steps:
+              - to: 'log:info'
