--- a/src/store/data/examples/camel-route.filter.yaml
+++ b/src/store/data/examples/camel-route.filter.yaml
@@ -1,8 +1,8 @@
 - from:
-    uri: "direct:route"
+    uri: 'direct:route'
     steps:
-    - filter:
-        simple: "${body.startsWith(\\"a\\")}"
-        steps:
-          - to: "mock:filter"
-    - to: "mock:route"
+      - filter:
+          simple: '${body.startsWith(\\"a\\")}'
+          steps:
+            - to: 'mock:filter'
+      - to: 'mock:route'
